force-app/main/default/objects/Energia_Actual__c/Energia_Actual__c.object-meta.xml
<CustomObject>
    <description>Representa la información acerca de las energías actuales de un candidato.</description>
    <label>Energía Actual - Usos del Gas</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energías Actuales - Usos del Gas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>