force-app/main/default/objects/Energia_Actual__c/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <label>Actividad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000-DU</fullName>
            </value>
            <value>
                <fullName>1100-CV</fullName>
            </value>
            <value>
                <fullName>1200-AGRI</fullName>
            </value>
            <value>
                <fullName>1300-IND</fullName>
            </value>
            <value>
                <fullName>1400-HRO</fullName>
            </value>
            <value>
                <fullName>1500-COL</fullName>
            </value>
            <value>
                <fullName>1600-CON</fullName>
            </value>
            <value>
                <fullName>1700-CAP</fullName>
            </value>
            <value>
                <fullName>1800-PC</fullName>
            </value>
            <value>
                <fullName>1850-PM</fullName>
            </value>
            <value>
                <fullName>1900-FLT - Agri</fullName>
            </value>
            <value>
                <fullName>1900-FLT - Ind</fullName>
            </value>
            <value>
                <fullName>2000-OP</fullName>
            </value>
            <value>
                <fullName>2100-DIGR</fullName>
            </value>
            <value>
                <fullName>2200-DIPC</fullName>
            </value>
            <value>
                <fullName>2300-UE</fullName>
            </value>
            <value>
                <fullName>3000-NG</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>