force-app/main/default/objects/Energia_Actual__c/fields/Cambio__c.field-meta.xml
<CustomField>
    <fullName>Cambio__c</fullName>
    <label>Cambio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>