force-app/main/default/objects/Energia_Actual__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Energias_actuales</relationshipName>
    <type>Lookup</type>
</CustomField>