force-app/main/default/objects/Energia_Actual__c/fields/Consumo__c.field-meta.xml
<CustomField>
    <fullName>Consumo__c</fullName>
    <label>Consumo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>