force-app/main/default/objects/Energia_Actual__c/fields/Consumo_Kg__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Kg__c</fullName>
    <label>Consumo Kg</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>