force-app/main/default/objects/Energia_Actual__c/fields/Consumo_KgCO2_Primagas__c.field-meta.xml
<CustomField>
    <fullName>Consumo_KgCO2_Primagas__c</fullName>
    <label>Consumo KgCO2 Primagas</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>