force-app/main/default/objects/Energia_Actual__c/fields/Consumo_L__c.field-meta.xml
<CustomField>
    <fullName>Consumo_L__c</fullName>
    <label>Consumo L</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>