force-app/main/default/objects/Energia_Actual__c/fields/DireccioDeEntrega__c.field-meta.xml
<CustomField>
    <fullName>DireccioDeEntrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dirección de Entrega relacionada</description>
    <label>Dirección de entrega</label>
    <referenceTo>Direcci_n_de_entrega__c</referenceTo>
    <relationshipName>Energias_Actuales</relationshipName>
    <type>Lookup</type>
</CustomField>