force-app/main/default/objects/Energia_Actual__c/fields/Importe_situacion_actual__c.field-meta.xml
<CustomField>
    <fullName>Importe_situacion_actual__c</fullName>
    <label>Importe situación actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>