force-app/main/default/objects/Energia_Actual__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Energias_Actuales</relationshipName>
    <type>Lookup</type>
</CustomField>