force-app/main/default/objects/Energia_Actual__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Energias_Actuales</relationshipName>
    <type>Lookup</type>
</CustomField>