force-app/main/default/objects/Energia_Actual__c/fields/Rendimiento__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento__c</fullName>
    <label>Rendimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>