force-app/main/default/objects/Energia_Actual__c/fields/Unidad_consumo__c.field-meta.xml
<CustomField>
    <fullName>Unidad_consumo__c</fullName>
    <label>Unidad consumo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Botellas 11 kg / año</fullName>
            </value>
            <value>
                <fullName>Botellas 12,5 kg / año</fullName>
            </value>
            <value>
                <fullName>Botellas 35 kg / año</fullName>
            </value>
            <value>
                <fullName>Botellas 6 kg / año</fullName>
            </value>
            <value>
                <fullName>Kg / año</fullName>
            </value>
            <value>
                <fullName>kWh / año</fullName>
            </value>
            <value>
                <fullName>Litros / año</fullName>
            </value>
            <value>
                <fullName>MWh / año</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>