force-app/main/default/objects/Energia_Actual__c/fields/Unidad_consumo_abreviada__c.field-meta.xml
<CustomField>
    <fullName>Unidad_consumo_abreviada__c</fullName>
    <description>Utilizado para mostrar el pdf de presupuesto</description>
    <label>Unidad consumo abreviada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>