force-app/main/default/objects/Energia_Actual__c/fields/Unidad_precio__c.field-meta.xml
<CustomField>
    <fullName>Unidad_precio__c</fullName>
    <label>Unidad precio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>€ / botella</fullName>
            </value>
            <value>
                <fullName>€ / kg</fullName>
            </value>
            <value>
                <fullName>€ / kWh</fullName>
            </value>
            <value>
                <fullName>€ / litro</fullName>
            </value>
            <value>
                <fullName>€ / MWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>